# chromes

./: docker-compose.yml
.github/workflows/: README.md  (+2 more)
netbird/: .coverage  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  PROJECT_COORDINATION.md  README.md  TASK_1_PROMPT.md  TASK_2_PROMPT.md  TASK_6-1_PROMPT.md  coverage.xml  manage_groups.py  pyproject.toml
netbird/pynetbird/: .gitignore  pyproject.toml
netbird/pynetbird/src/pynetbird/: __init__.py  base.py  config.py  exceptions.py  utils.py
netbird/pynetbird/src/pynetbird/cli/: __init__.py
netbird/pynetbird/src/pynetbird/cli/commands/: __init__.py
netbird/pynetbird/src/pynetbird/managers/: __init__.py
netbird/pynetbird/src/pynetbird/models/: __init__.py  base.py  group.py  peer.py  policy.py
netbird/pynetbird/tests/: README.md  __init__.py  conftest.py  test_base.py  test_exceptions.py  test_framework.py  test_models.py  utils.py
netbird/pynetbird/tests/e2e/: test_real_api.py
netbird/pynetbird/tests/fixtures/: __init__.py  api_responses.py  factories.py  mock_server.py
netbird/pynetbird/tests/integration/: test_client.py
netbird/pynetbird/tests/integration/test_managers/: test_group_manager.py  test_peer_manager.py  test_policy_manager.py
netbird/pynetbird/tests/unit/: test_basic_functionality.py  test_config.py  test_utils_module.py
netbird/pynetbird/tests/unit/test_managers/: test_group_manager.py  test_peer_manager.py  test_policy_manager.py
netbird/pynetbird/tests/unit/test_models/: test_group.py  test_peer.py  test_policy.py
work-env/: .env  .env.example  README.md  docker-compose.yml  dockerfile  entrypoint.sh  nginx.conf  oauth2-proxy.cfg
